# cargo-dev-install

./: AGENTS.md  Cargo.toml  LICENSE.md  README.md  TESTING.md  architecture.md
.github/workflows/: ci.yml
src/: cli.rs  install.rs  lib.rs  main.rs  project.rs  tui_select.rs
tests/: integration.rs
