[package]
name = "cargo-dev-install"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand to install dev wrappers for running from source"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kain88-de/cargo-dev-install"
keywords = ["cargo", "subcommand", "dev", "install"]
categories = ["development-tools::cargo-plugins"]

[[bin]]
name = "cargo-dev-install"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.19"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
